--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -14,15 +14,15 @@
 				Tecnologia				
 			</li>
 			<% if user_signed_in? %>
-				<li>
+				<li class="col-md">
 					<%= link_to "Cerrar sesion" , destroy_user_session_path, method: :delete %>
 				</li>
 			<% else %>
-				<li>
-					<%= link_to "Iniciar sesion" , new_user_session_path, method: :delete %>
+				<li class="col-md">
+					<%= link_to "Iniciar sesion" , new_user_session_path %>
 				</li>
-				<li>
-					<%= link_to "Crear cuenta" , new_user_registration_path, method: :delete %>
+				<li class="col-md">
+					<%= link_to "Crear cuenta" , new_user_registration_path%>
 				</li>
 			<%end%>
 
